<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:paddingStart="@dimen/horizontal_margin"
        android:paddingEnd="@dimen/horizontal_margin"
        >
        <TextView
            android:id="@+id/activity_order_song_room_info_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_order_song_room_info_label"
            android:textSize="@dimen/smallText"
            android:textColor="@color/colorDarkWhiter"
            />
        <TextView
            android:id="@+id/activity_order_song_room_title_label"
            app:layout_constraintTop_toBottomOf="@+id/activity_order_song_room_info_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_order_song_room_title_label"
            android:textSize="@dimen/smallText"
            android:textColor="@color/colorDarkWhiter"
            />
        <TextView
            android:id="@+id/activity_order_song_room_title"
            app:layout_constraintTop_toBottomOf="@+id/activity_order_song_room_title_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/bigText"
            android:textColor="@color/colorDark"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/activity_order_song_button_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:text="@string/activity_order_song_button_order"
        />
</androidx.constraintlayout.widget.ConstraintLayout>